--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -1,6 +1,7 @@
 # Sikder Make file
 all:
 	g++ -Wall -std=c++11 driver.cpp Square.cpp -o main
+	g++ -Wall -std=c++11 driver.cpp Square.cpp Rectangle.cpp -o main
 
 clean:
 	rm -f main
